--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -9,25 +9,33 @@ coordies:
         mail: jdevansh21@iitk.ac.in
         github: devansh-jain-2002
         image: devansh.jpg
-        fb:
+        fb: profile.php?id=100075457651008
+        linkedin: devansh-jain-iitk
+        insta: d_j_yo
     'Pratham Sahu':
         number: 7619678791
         mail: spratham21@iitk.ac.in
         github: prathamsahu52
         image: pratham.jpg
-        fb:
+        fb: profile.php?id=100075048682618
+        linkedin: pratham-sahu-39500b223
+        insta: oneprathamsahu
     'Rahul Jha':
         number: 8700367670
         mail: rahulj21@iitk.ac.in
         github: juggernautjha
         image: jha.jpg
-        fb:
+        fb: profile.php?id=100074917987815
+        linkedin: juggernautjha
+        insta: brig.behoshi
     'Ridin Datta':
         number: 7439079526
         mail: ridind21@iitk.ac.in
         github: rhydberg
         image: ridin.jpg
-        fb:
+        fb: profile.php?id=100075247899731
+        linkedin: ridin-datta-932697226
+        insta: rhydburgerr
 
 secys:
     'Abhijit Singh Jowhari':
@@ -207,24 +215,32 @@ excoordies:
         github: wiredinhp
         image: hetp.jpg
         fb: wiredinhp
+        linkedin: wiredinhp
+        insta: hetpatel1705
     'Parinay Chauhan':
         number: 9264933530
         mail: parinayc20@iitk.ac.in
         github: parinayc20
         image: parinay.jpg
         fb: parinay.chauhan.1
+        linkedin: parinaychauhan
+        insta: parinay_chauhan
     'Prem Bharwani':
         number: 7715007558
         mail: premr20@iitk.ac.in
         github: PremBharwani
         image: prem.jpg
         fb: bharwaniprem
+        linkedin: prem-bharwani
+        insta: prem.bharwani
     'Shivam Mishra':
         number: 8604397668
         mail: mshivam20@iitk.ac.in
         github: 7shivamx
         image: shivam.jpg
         fb: 7shivamx
+        linkedin: thealgosniper
+        insta: 7shivam.mishra
   '2021 - 22':
     'Atharv Singh Patlan':
       mail: atharvsp@iitk.ac.in
@@ -732,8 +748,8 @@ Current coordies
                 <div class="team-social">
                     <a href="https://github.com/{{ coordie[1].github }}" class="social-tw"> <i class="fa fa-github" style="font-size: 24px; margin-bottom: 0px; "></i> </a>
                     <a href="https://facebook.com/{{ coordie[1].fb }}" class="social-fb"> <i class="fa fa-facebook" style="font-size: 24px; margin-bottom: 0px; "></i></a>
-                    <a href="#" class="social-li"> <i class="fa fa-linkedin" style="font-size: 24px; margin-bottom: 0px; "></i></a>
-                    <a href="#" class="social-in"> <i class="fa fa-instagram" style="font-size: 24px; margin-bottom: 0px; "></i></a>
+                    <a href="https://linkedin.com/in/{{ coordie[1].linkedin }}" class="social-li"> <i class="fa fa-linkedin" style="font-size: 24px; margin-bottom: 0px; "></i></a>
+                    <a href="https://instagram.com/{{ coordie[1].insta }}" class="social-in"> <i class="fa fa-instagram" style="font-size: 24px; margin-bottom: 0px; "></i></a>
                     <a href="mailto:{{ coordie[1].mail }}" class="social-ml"> <i class="fa fa-envelope" style="font-size: 24px; margin-bottom: 0px; "></i></a>
                 </div>
             </div>
@@ -803,8 +819,8 @@ ex-coordis
               <div class="team-social">
                 <a href="https://github.com/{{ coordie[1].github }}" class="social-tw"> <i class="fa fa-github" style="font-size: 24px; margin-bottom: 0px; "></i></a>
                 <a href="https://facebook.com/{{ coordie[1].fb }}" class="social-fb"> <i class="fa fa-facebook" style="font-size: 24px; margin-bottom: 0px; "></i></i></a>
-                <a href="#" class="social-li"> <i class="fa fa-linkedin" style="font-size: 24px; margin-bottom: 0px; "></i></a>
-                <a href="#" class="social-in"> <i class="fa fa-instagram" style="font-size: 24px; margin-bottom: 0px; "></i></a>
+                <a href="https://linkedin.com/in/{{ coordie[1].linkedin }}" class="social-li"> <i class="fa fa-linkedin" style="font-size: 24px; margin-bottom: 0px; "></i></a>
+                <a href="https://instagram.com/{{ coordie[1].insta }}" class="social-in"> <i class="fa fa-instagram" style="font-size: 24px; margin-bottom: 0px; "></i></a>
                 <a href="mailto:{{ coordie[1].mail }}" class="social-ml"> <i class="fa fa-envelope" style="font-size: 24px; margin-bottom: 0px; "></i></a>
               </div>
           </div>
