--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -722,7 +722,7 @@ Current coordies
         <div class="column">
             <div class="team">
                 <div class="team-img">
-                    <img data-src="/images/{{coordie[1].image}}" alt="Team Image" class="blur-up lazyload">
+                    <img data-src="/pclub-website/images/{{coordie[1].image}}" alt="Team Image" class="blur-up lazyload">
                 </div>
                 <div class="team-content">
                     <h2>{{coordie[0]}}</h2>
@@ -792,7 +792,7 @@ ex-coordis
       <div class="column">
           <div class="team">
               <div class="team-img">
-                  <img data-src="/images/{{coordie[1].image}}" alt="Team Image" class="blur-up lazyload">
+                  <img data-src="/pclub-website/images/{{coordie[1].image}}" alt="Team Image" class="blur-up lazyload">
               </div>
               <div class="team-content">
                   <h2>{{coordie[0]}}</h2>
