--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -36,7 +36,7 @@ coordies:
         mail: yashps22@iitk.ac.in
         insta_id: yps_8181
         github: its-me-yps
-        image: yashps.jpg
+        image: yashps.png
         fb:
         linkedin: its-me-yps
 
