--- a/_pages/roadmaps.html
+++ b/_pages/roadmaps.html
@@ -25,8 +25,8 @@ image:
     top: 0;
     bottom: 0;
     width: 4px;
-    background-color: #08c259;
-    box-shadow: 0 0 10px #08c259; /* Adds glow effect */
+    background-color: #ff7b7b;
+    box-shadow: 0 0 10px #ff7b7b; /* Adds glow effect */
     z-index: 1;
   }
 
@@ -70,8 +70,8 @@ image:
     top: 50%;
     width: 30px; /* Length of the branching line */
     height: 2px;
-    background-color: #08c259;
-    box-shadow: 0 0 8px #08c259; 
+    background-color: #ff7b7b;
+    box-shadow: 0 0 8px #ff7b7b; 
     z-index: 1;
     transform: translateY(-50%);
   }
