Corrected an insta handle

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -157,7 +157,7 @@ secys:
     hall: 6
     mail: medhaagar23@iitk.ac.in
     number: 8924885144
-    insta_id: medha09
+    insta_id: medhaagarwal__
     github: medhaa09
 
   "Om Gupta":
