--- a/_posts/2024-07-21-cp-roadmap.html
+++ b/_posts/2024-07-21-cp-roadmap.html
@@ -6,8 +6,10 @@ website: https://github.com/life-iitk
 category: Roadmap
 tags:
     - roadmap
+    - Competitive Programming
     - competitive
-    - cp
+    - Data Structures
+    - Algorithms
 categories:
     - roadmap
 hidden: true
@@ -7947,7 +7949,7 @@ h1.main{
                 title="DP-on-Grids-"><span
                     class="octicon octicon-link ph ph-link-simple-horizontal"></span></a><strong><span>DP on Grids
                     :</span></strong></h3>
-        <p><a href="https://atcoder.jp/contests/dp/tasks/dp_d" target="_blank" rel="noopener"><span>This tutorial
+        <p><a href="https://atcoder.jp/contests/dp/tasks/" target="_blank" rel="noopener"><span>This tutorial
                 </span></a><span>has some generic problems which will develop your understanding about grids .</span>
         </p>
         <blockquote>
