Roadmap Updates and Blog Credits

--- a/_posts/2024-07-21-cp-roadmap.html
+++ b/_posts/2024-07-21-cp-roadmap.html
@@ -7949,8 +7949,9 @@ h1.main{
                 title="DP-on-Grids-"><span
                     class="octicon octicon-link ph ph-link-simple-horizontal"></span></a><strong><span>DP on Grids
                     :</span></strong></h3>
-        <p><a href="https://atcoder.jp/contests/dp/tasks/" target="_blank" rel="noopener"><span>This tutorial
-                </span></a><span>has some generic problems which will develop your understanding about grids .</span>
+        <p><span>Read </span><a href="https://usaco.guide/CPH.pdf#page=81" target="_blank"
+                    rel="noopener"><span> CPH CH7-3 </span></a><span> and </span><a
+                    href="https://usaco.guide/CPH.pdf#page=84" target="_blank" rel="noopener"><span> CPH CH7-5 </span></a><span> . It will develop your understanding about DP on Grids. </span>
         </p>
         <blockquote>
             <ul class="contains-task-list">
@@ -9634,6 +9635,8 @@ h1.main{
             <li><mark><a href="https://youkn0wwho.academy/topic-list" target="_blank" rel="noopener"><span>The Ultimate
                             Topic List</span></a></mark></li>
             <li><a href="https://cses.fi/problemset/" target="_blank" rel="noopener"><span>CSES Problem Set</span></a>
+            </li>
+            <li><a href="https://www.interviewbit.com/courses/programming/" target="_blank" rel="noopener"><span>InterviewBit </span></a>
             </li>
             <li><a href="https://earthshakira.github.io/a2oj-clientside/server/Ladders.html" target="_blank"
                     rel="noopener"><span>A2OJ Ladders</span></a></li>
