Updated Contact section

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -4,219 +4,242 @@ title: Contact Us
 permalink: /contact/
 image:
 coordies:
-  "Burhanuddin Merchant ":
-    number: 8815992866
-    mail: bmerchant22@iitk.ac.in
-    insta_id: merchant_burhanuddin53
-    github: bmerchant22
-    image: burhan.jpg
-    fb:
-    linkedin: burhanuddin-merchant-23622a254
-
-  "Divyansh Garg":
-    number: 9818970175
-    mail: divyanshg22@iitk.ac.in
-    insta_id: _divyansh._.garg
-    github: hash-brow
-    image: divyansh.jpg
-    fb:
-    linkedin: divyansh-garg-780a94252
-
-  "Hardik Jindal ":
-    number: 9582890169
-    mail: hardikj22@iitk.ac.in
-    insta_id: hardikj_1408
-    github: hardik1408
-    image: hardik.jpg
-    fb:
-    linkedin: hardik-jindal-1a2176250
-
-  "Yash Pratap Singh":
-    number: 7007519537
-    mail: yashps22@iitk.ac.in
-    insta_id: yps_8181
-    github: its-me-yps
-    image: yashps.png
-    fb:
-    linkedin: its-me-yps
-
-secys:
-  "Aarush Singh Kushwaha":
-    hall: 12
-    mail: aarushsk23@iitk.ac.in
-    number: 9643216563
-    insta_id: _aarush.01_
-    github: aasiku
-
   "Aayush Anand":
-    hall: 3
+    number: 88510 70814
     mail: aayusha23@iitk.ac.in
-    number: 8851070814
     insta_id: aayush.anandx
     github: aayush01x
-
-  "Abhimanyu Solanki":
-    hall: 2
-    mail: abhimanyus23@iitk.ac.in
-    number: 8218196261
-    insta_id: abhimanyu_4841
-    github: Abhimanyu-dev
-
-  "Akshat":
-    hall: 3
-    mail: akshat23@iitk.ac.in
-    number: 9389733410
-    insta_id: akshat_knpr
-    github: AkshatGupta15
-
-  "Anirudh Singh ":
-    hall: 2
-    mail: sanirudh23@iitk.ac.in
-    number: 6397561276
-    insta_id: basalt_802
-    github: anirudh802
-
-  "Arnav Gupta":
-    hall: 2
-    mail: arnavgupta23@iitk.ac.in
-    number: 8861819612
-    insta_id: arnav_gupta114
-    github: arnavg11
-
-  "Aryan Mahesh Gupta":
-    hall: 2
-    mail: aryanmg23@iitk.ac.in
-    number: 8376860515
-    insta_id: aryan_fidget_445
-    github: fidgetaryan445
-
-  "Dweep Joshipura":
-    hall: 5
-    mail: dweepj23@iitk.ac.in
-    number: 9353494288
-    insta_id: dweepj_05
-    github: djthegr8
-
-  "Harshit Jaiswal ":
-    hall: 12
-    mail: harshitj23@iitk.ac.in
-    number: 9793740831
-    insta_id: justharshitj
-    github: HARSHITJAIS14
-
-  "Harshit Tomar":
-    hall: 5
-    mail: harshitt23@iitk.ac.in
-    number: 9891341130
-    insta_id: code.imperfect
-    github: code-IM-perfect
+    image: aayush.jpg
+    fb: ""
+    linkedin: aayush-anand-043756203
 
   "Himanshu Sharma":
-    hall: 12
+    number: 99996 33455
     mail: himans23@iitk.ac.in
-    number: 9999633455
     insta_id: sh_hi.man.shu
-    github: blakktyger
+    github: BlakkTyger
+    image: himanshu.jpg
+    fb: ""
+    linkedin: himanshu-sharma-152282217
 
-  "Himesh Singh":
-    hall: 12
-    mail: himeshps23@iitk.ac.in
-    number: 9335099260
-    insta_id: h_semi_h
-    github: himeshps
-
-  "Karan Keer":
-    hall: 12
-    mail: karank23@iitk.ac.in
-    number: 9358152408
-    insta_id: kk.karan05
-    github: karankk-05
-
-  "Khushi Ranawat ":
-    hall: 6
-    mail: rkhushi23@iitk.ac.in
-    number: 9784241637
-    insta_id: ranawat_k456
-    github: khushi-2653
-
-  "Kshitij Gupta":
-    hall: 5
-    mail: kshitijg23@iitk.ac.in
+  "kshitij Gupta":
     number: 9897605316
+    mail: kshitijg23@iitk.ac.in
     insta_id: kshitij._.gupta._
     github: Kshitijg18
+    image: kshitij.jpg
+    fb: ""
+    linkedin: kshitij-gupta-a85133290
 
   "Manas Jain Kuniya":
-    hall: 5
-    mail: manasjain23@iitk.ac.in
     number: 8003354169
+    mail: manasjain23@iitk.ac.in
     insta_id: this_is_mjk
     github: this-is-mjk
+    image: manas-jain-kuniya.jpg
+    fb: ""
+    linkedin: this_is_mjk
 
-  "Medha Agarwal ":
-    hall: 6
-    mail: medhaagar23@iitk.ac.in
-    number: 8924885144
-    insta_id: medhaagarwal__
-    github: medhaa09
-
-  "Om Gupta":
-    hall: 5
-    mail: omgupta23@iitk.ac.in
-    number: 8601609937
-    insta_id: om__gupta___
-    github: omgupta-iitk
-
-  "Ravi Arora":
-    hall: 12
-    mail: raviarora23@iitk.ac.in
-    number: 9148692491
-    insta_id: arora_ravi_1209
-    github: PhantomzBack
-
-  "Rishi Divya Kirti":
+secys:
+  "Abhinav Raj":
     hall: 2
-    mail: rishid23@iitk.ac.in
-    number: 9153938374
-    insta_id: rdksupe
-    github: rdksupe
+    mail: abhinavraj24@iitk.ac.in
+    number: 8969868737
+    insta_id: abhinav_raj_06
+    github: abhinav066977
 
-  "Rohit Somani":
+  "Abubakar Siddique":
     hall: 5
-    mail: rohitvs23@iitk.ac.in
-    number: 9028920661
-    insta_id: _rohit_somani
-    github: rohitsomani
+    mail: abubakars24@iitk.ac.in
+    number: 7073656967
+    insta_id: reverse_flash81
+    github: AbuSid2007
 
-  "Saksham Agarwal":
-    hall: 5
-    mail: sakshamag23@iitk.ac.in
-    number: 9118052439
-    insta_id: saksham.agarwal22
-    github: code-timely
-
-  "Suyash Kumar":
+  "Aditya Sai":
     hall: 2
-    mail: ksuyash23@iitk.ac.in
-    number: 9807199316
-    insta_id: safebet5705
-    github: Safe-bet
+    mail: adityasv24@iitk.ac.in
+    number: 6302848456
+    insta_id: aditya_sv15
+    github: kingpsi15
 
-  "Tattwa Shiwani":
+  "Anany Rai":
     hall: 3
-    mail: tattwash23@iitk.ac.in
-    number: 9887837333
-    insta_id: tattwa_235
-    github: Emminence23
+    mail: ananyk24@iitk.ac.in
+    number: 9870401439
+    insta_id: me_singularity
+    github: Singularityy0
 
-  "Yatharth Dangi":
+  "Arman Singhal":
     hall: 5
-    mail: yatharth23@iitk.ac.in
-    number: 6377153842
-    insta_id: dangi.yatharth
-    github: EMPEROR82
+    mail: armans24@iitk.ac.in
+    number: 6364025842
+    insta_id: arm4n76
+    github: Chwiz67
+
+  "Arnab Datta":
+    hall: 12
+    mail: arnabd24@iitk.ac.in
+    number: 9007759193
+    insta_id: 24arnab
+    github: DattaArnab
+
+  "Ashish Gautam":
+    hall: 5
+    mail: ashishu24@iitk.ac.in
+    number: 8955774719
+    insta_id: coral_ashg
+    github: booker-de-witt
+
+  "Austin Shijo":
+    hall: 5
+    mail: austins24@iitk.ac.in
+    number: 8946061070
+    insta_id: ""
+    github: mTvare6
+
+  "Jagrav Garg":
+    hall: 3
+    mail: jagravg24@iitk.ac.in
+    number: 7988012612
+    insta_id: jaguar_garg
+    github: Jagrav-Garg
+
+  "Jithin J Joshi":
+    hall: 5
+    mail: jithinj24@iitk.ac.in
+    number: 9072353215
+    insta_id: jithinjoshi7
+    github: mrjithin
+
+  "Ketan":
+    hall: 5
+    mail: ketanlal24@iitk.ac.in
+    number: 9610407327
+    insta_id: ketan__aggarwal
+    github: Ketan-Agarwal
+
+  "Muragesh Nyamagoud":
+    hall: 5
+    mail: muragesh24@iitk.ac.in
+    number: 9353466456
+    insta_id: iammuragesh
+    github: muragesh24
+
+  "Parth Patil":
+    hall: 5
+    mail: parthnp24@iitk.ac.in
+    number: 9834453746
+    insta_id: parth_2412_
+    github: Parth-2412
+
+  "Ritika Batra":
+    hall: 6
+    mail: ritikab24@iitk.ac.in
+    number: 9528477602
+    insta_id: ""
+    github: ritgit24
+
+  "Shivam Sah":
+    hall: 12
+    mail: shivamsah24@iitk.ac.in
+    number: 9315060115
+    insta_id: shivamsah_13
+    github: shivam-0806
+
+  "Shivang":
+    hall: 2
+    mail: shivangd24@iitk.ac.in
+    number: 6378497030
+    insta_id: _shivang019_iitk28
+    github: Shivangtg
+
+  "Shivansh Jaiswal":
+    hall: 2
+    mail: shivanshj24@iitk.ac.in
+    number: 9971104638
+    insta_id: sjais1337
+    github: sjais1337
+
+  "Sujal Satish Motagi":
+    hall: 12
+    mail: sujalsm24@iitk.ac.in
+    number: 7349439500
+    insta_id: bakajal_2
+    github: Sujal1234
+
+  "Suvan Arora":
+    hall: 5
+    mail: suvan24@iitk.ac.in
+    number: 9779564566
+    insta_id: aroraasuuvan
+    github: syntaxking-7
+
+  "Taran Mohta":
+    hall: 5
+    mail: taranm24@iitk.ac.in
+    number: 7977152322
+    insta_id: ""
+    github: tremendous1712
+
+  "Vishu Khare":
+    hall: 3
+    mail: vishuk24@iitk.ac.in
+    number: 8368600051
+    insta_id: vishukhare3444
+    github: rocketpowerkille
+
+  "Yatin Preetam Bhojwani":
+    hall: 3
+    mail: yatinb24@iitk.ac.in
+    number: 9322741860
+    insta_id: _yatinn._
+    github: yatin-bhojwani
+
+  "Yuvraj Singh Nirban":
+    hall: 3
+    mail: yuvraj24@iitk.ac.in
+    number: 9829733086
+    insta_id: ""
+    github: NovaPrime2077
 
 excoordies:
+  "2024 - 25":
+    "Burhanuddin Merchant":
+      number: 8815992866
+      mail: bmerchant22@iitk.ac.in
+      insta_id: merchant_burhanuddin53
+      github: bmerchant22
+      image: burhan.jpg
+      fb: ""
+      linkedin: burhanuddin-merchant-23622a254
+
+    "Divyansh Garg":
+      number: 9818970175
+      mail: divyanshg22@iitk.ac.in
+      insta_id: _divyansh._.garg
+      github: hash-brow
+      image: divyansh.jpg
+      fb: ""
+      linkedin: divyansh-garg-780a94252
+
+    "Hardik Jindal":
+      number: 9582890169
+      mail: hardikj22@iitk.ac.in
+      insta_id: hardikj_1408
+      github: hardik1408
+      image: hardik.jpg
+      fb: ""
+      linkedin: hardik-jindal-1a2176250
+
+    "Yash Pratap Singh":
+      number: 7007519537
+      mail: yashps22@iitk.ac.in
+      insta_id: yps_8181
+      github: its-me-yps
+      image: yashps.png
+      fb: ""
+      linkedin: its-me-yps
+
   "2023 - 24":
     "Devansh Jain":
       number: 9464327218
@@ -224,31 +247,34 @@ excoordies:
       github: devansh-jain-2002
       image: devansh.jpg
       insta_id: d_j_yo
-      fb:
+      fb: ""
       linkedin: devansh-jain-iitk
+
     "Pratham Sahu":
       number: 7619678791
       mail: spratham21@iitk.ac.in
       github: prathamsahu52
       image: pratham.jpg
       insta_id: oneprathamsahu
-      fb:
+      fb: ""
       linkedin: pratham-sahu-39500b223
+
     "Rahul Jha":
       number: 8700367670
       mail: rahulj21@iitk.ac.in
       github: juggernautjha
       image: jha.jpg
-      insta_id:
-      fb:
+      insta_id: ""
+      fb: ""
       linkedin: juggernautjha
+
     "Ridin Datta":
       number: 7439079526
       mail: ridind21@iitk.ac.in
       github: rhydberg
       image: ridin.jpg
       insta_id: rhydburgerr
-      fb:
+      fb: ""
       linkedin: ridin-datta-932697226
 
   "2022 - 23":
@@ -683,11 +709,13 @@ excoordies:
   }
 
   .team .team-img img {
-    width: 200px;
-    height: auto;
-    border-radius: 100%;
-    border: 20px solid #26293a;
-  }
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  object-position: top;       
+  border-radius: 100%;
+  border: 20px solid #26293a;
+}
 
   .team .team-content {
     padding: 80px 20px 20px 20px;
@@ -864,6 +892,7 @@ excoordies:
   .social-media-logo {
     margin-bottom: 10px !important;
   }
+  
 </style>
 
 {% comment %} Current coordies {% endcomment %}
@@ -881,7 +910,7 @@ excoordies:
           <img
             data-src="/images/{{coordie[1].image}}"
             alt="Team Image"
-            class="blur-up lazyload"
+            class="blur-up lazyload" 
           />
         </div>
         <div class="team-content">
