Solved some errors in ContactPage

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -22,7 +22,7 @@ coordies:
     fb: ""
     linkedin: himanshu-sharma-152282217
 
-  "kshitij Gupta":
+  "Kshitij Gupta":
     number: 9897605316
     mail: kshitijg23@iitk.ac.in
     insta_id: kshitij._.gupta._
@@ -122,8 +122,8 @@ secys:
     hall: 5
     mail: muragesh24@iitk.ac.in
     number: 9353466456
-    insta_id: iammuragesh
-    github: muragesh24
+    insta_id: iam.muragesh
+    github: muragesh-24
 
   "Parth Patil":
     hall: 5
@@ -159,6 +159,13 @@ secys:
     number: 9971104638
     insta_id: sjais1337
     github: sjais1337
+  
+  "Shreyansh Rastogi":
+    hall: 12
+    mail: shreyanshr24@iitk.ac.in
+    number: 7459094300
+    insta_id: shreyanshrastogi23
+    github: Shreyansh120
 
   "Sujal Satish Motagi":
     hall: 12
@@ -921,6 +928,7 @@ excoordies:
         <div class="team-social">
           <a
             href="https://github.com/{{ coordie[1].github }}"
+            target="_blank"
             class="social-tw"
           >
             <i
@@ -930,6 +938,7 @@ excoordies:
           </a>
           <a
             href="https://www.linkedin.com/in/{{ coordie[1].linkedin }}/"
+            target="_blank"
             class="social-li"
           >
             <i
@@ -939,6 +948,7 @@ excoordies:
           ></a>
           <a
             href="https://www.instagram.com/{{ coordie[1].insta_id }}/"
+            target="_blank"
             class="social-in"
           >
             <i
@@ -946,7 +956,7 @@ excoordies:
               style="font-size: 24px; margin-bottom: 0px"
             ></i
           ></a>
-          <a href="mailto:{{ coordie[1].mail }}" class="social-ml">
+          <a href="mailto:{{ coordie[1].mail }}"  class="social-ml">
             <i
               class="fa fa-envelope"
               style="font-size: 24px; margin-bottom: 0px"
@@ -1026,6 +1036,7 @@ excoordies:
         <div class="team-social">
           <a
             href="https://github.com/{{ coordie[1].github }}"
+            target="_blank"
             class="social-tw"
           >
             <i
@@ -1035,6 +1046,7 @@ excoordies:
           ></a>
           <a
             href="https://www.linkedin.com/in/{{ coordie[1].linkedin }}/"
+            target="_blank"
             class="social-li"
           >
             <i
@@ -1044,6 +1056,7 @@ excoordies:
           ></a>
           <a
             href="https://www.instagram.com/{{ coordie[1].insta_id }}/"
+            target="_blank"
             class="social-in"
           >
             <i
