--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -39,6 +39,52 @@ coordies:
     image: manas-jain-kuniya.jpg
     fb: ""
     linkedin: this_is_mjk
+  
+LSTMs:
+  "Aarush Singh Kushwaha":
+    number: 96432 16563
+    mail:  aasikucoding@gmail.com
+    insta_id: aarush.01
+    github: AaSiKu
+    image: aarush.jpg
+    fb: ""
+    linkedin: aasiku
+
+  "Anirudh Singh":
+    number: 6397561276
+    mail: sanirudh23@iitk.ac.in
+    insta_id: basalt_802
+    github: anirudh802
+    image: anirudh.png
+    fb: ""
+    linkedin: anirudh-singh-57b82a286?
+
+  "Medha Agarwal":
+    number: 8924885144
+    mail: medhaagarwal603@gmail.com
+    insta_id: medhaagarwal__
+    github: medhaa09
+    image: Medha.jpg
+    fb: ""
+    linkedin: medha-agarwal-a11b7027a?
+
+  "Sohom Chakraborty":
+    number: 95730 68071
+    mail: sohomc23@iitk.ac.in
+    insta_id: solus.dot
+    github: Solus-dot
+    image: sohom.png
+    fb: ""
+    linkedin: sohom-chakraborty-5698622a0
+
+  "Sohom Panchal":
+    number: 98251 65377
+    mail: sohomc23@iitk.ac.in
+    insta_id: solus.dot
+    github: Solus-dot
+    image: sohom.png
+    fb: ""
+    linkedin: sohom-chakraborty-5698622a0  
 
 secys:
   "Abhinav Raj":
@@ -165,7 +211,7 @@ secys:
     mail: shreyanshr24@iitk.ac.in
     number: 7459094300
     insta_id: shreyanshrastogi23
-    github: Shreyansh120
+    github: Shreyansh1206
 
   "Sujal Satish Motagi":
     hall: 12
@@ -966,6 +1012,71 @@ excoordies:
       </div>
     </div>
 
+    {% endfor %}
+  </div>
+</div>
+
+<div class="container">
+  <div class="section-title">
+    <h1>Current LSTM's</h1>
+  </div>
+
+  <div class="row1">
+    {% for LSTM in page.LSTMs %}
+    <div class="column">
+      <div class="team">
+        <div class="team-img">
+          <img
+            data-src="/images/{{ LSTM[1].image }}"
+            alt="Team Image"
+            class="blur-up lazyload"
+          />
+        </div>
+        <div class="team-content">
+          <h2>{{ LSTM[0] }}</h2>
+          <h3>{{ LSTM[1].number }}</h3>
+          <h4>{{ LSTM[1].mail }}</h4>
+        </div>
+        <div class="team-social">
+          <a
+            href="https://github.com/{{ LSTM[1].github }}"
+            target="_blank"
+            class="social-tw"
+          >
+            <i
+              class="fa fa-github"
+              style="font-size: 24px; margin-bottom: 0px"
+            ></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/{{ LSTM[1].linkedin }}/"
+            target="_blank"
+            class="social-li"
+          >
+            <i
+              class="fa fa-linkedin"
+              style="font-size: 24px; margin-bottom: 0px"
+            ></i>
+          </a>
+          <a
+            href="https://www.instagram.com/{{ LSTM[1].insta_id }}/"
+            target="_blank"
+            class="social-in"
+          >
+            <i
+              class="fa fa-instagram"
+              style="font-size: 24px; margin-bottom: 0px"
+            ></i>
+          </a>
+          <a href="mailto:{{ LSTM[1].mail }}" class="social-ml">
+            <i
+              class="fa fa-envelope"
+              style="font-size: 24px; margin-bottom: 0px"
+            ></i>
+          </a>
+        </div>
+      </div>
+    </div>
     {% endfor %}
   </div>
 </div>
