Completed LSTM Contact Section

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -44,7 +44,7 @@ LSTMs:
   "Aarush Singh Kushwaha":
     number: 96432 16563
     mail:  aasikucoding@gmail.com
-    insta_id: aarush.01
+    insta_id: _aarush.01_
     github: AaSiKu
     image: aarush.jpg
     fb: ""
@@ -79,12 +79,12 @@ LSTMs:
 
   "Sohom Panchal":
     number: 98251 65377
-    mail: sohomc23@iitk.ac.in
-    insta_id: solus.dot
-    github: Solus-dot
-    image: sohom.png
+    mail: sohamgp23@iitk.ac.in
+    insta_id: starvis_05
+    github: Sohamp05
+    image: soham.jpg
     fb: ""
-    linkedin: sohom-chakraborty-5698622a0  
+    linkedin: soham-panchal-94725727b?  
 
 secys:
   "Abhinav Raj":
@@ -911,8 +911,11 @@ excoordies:
       max-width: 1140px;
     }
   }
+ 
   .secyTable {
-    width: 100%;
+     width: 100%;
+     overflow-x: auto;
+  padding-bottom: 10px;
   }
 
   .secyTable tr {
@@ -1087,6 +1090,7 @@ excoordies:
   <div class="section-title">
     <h1>Current Secretaries</h1>
   </div>
+
   <table class="secyTable" cellpadding="5">
     <tr>
       <th>Name</th>
@@ -1119,6 +1123,7 @@ excoordies:
     </tr>
     {% endfor %}
   </table>
+
 </div>
 
 {% comment %} ex-coordis {% endcomment %} {% for year in page.excoordies %}
