updated minor error

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -77,7 +77,7 @@ LSTMs:
     fb: ""
     linkedin: sohom-chakraborty-5698622a0
 
-  "Sohom Panchal":
+  "Soham Panchal":
     number: 98251 65377
     mail: sohamgp23@iitk.ac.in
     insta_id: starvis_05
