--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -73,7 +73,7 @@ LSTMs:
     mail: sohomc23@iitk.ac.in
     insta_id: solus.dot
     github: Solus-dot
-    image: sohom.png
+    image: sohom.jpg
     fb: ""
     linkedin: sohom-chakraborty-5698622a0
 
