--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1036,7 +1036,7 @@ excoordies:
 
 <div class="container">
   <div class="section-title">
-    <h1>Current LSTM's</h1>
+    <h1>Current LSTMs</h1>
   </div>
 
   <div class="row1">
