--- a/_pages/project.html
+++ b/_pages/project.html
@@ -50,13 +50,15 @@ image:
     transition-duration: 0s !important;
   } */
 
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(4, 240px);
-    grid-gap: 32px;
-    position: relative;
-    z-index: 1;
-  }
+ .grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-gap: 32px;
+  position: relative;
+  z-index: 1;
+}
+
+
 
   .card {
     background-color: #18181b;
@@ -514,6 +516,7 @@ image:
   }
 </style>
 
+
 <div class="grid">
   {% for post in site.posts %}
   {% if post.categories contains 'project' %}
@@ -558,7 +561,6 @@ image:
   {% endif %}
   {% endfor %}
 </div>
-
 
 <!-- <div style="margin: 1rem auto;">
 
