improved hover effect in contact cards for small devices

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -872,6 +872,12 @@ excoordies:
     background: #222222;
   }
 
+
+  @media(max-width: 768px){
+    .team-social{
+      margin-top: 3rem;
+    }
+  }
   @media (min-width: 576px) {
     .container {
       max-width: 540px;
