LSTM: Added contact information for Anirudh Singh

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -49,7 +49,16 @@ LSTMs:
     github: Sohamp05
     image: soham.jpg
     fb: ""
-    linkedin: soham-panchal-94725727b?  
+    linkedin: soham-panchal-94725727b?
+
+  "Anirudh Singh":
+    number: 6397561276
+    mail: sanirudh23@iitk.ac.in
+    insta_id: basalt_802
+    github: anirudh802
+    image: anirudh.png
+    fb: ""
+    linkedin: anirudh-singh-57b82a286?
 
 secys:
   "Abhinav Raj":
